components/tekton-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  annotations:
    route.openshift.io/termination: "edge"
spec:
  rules:
    - host: tekton-dashboard.apps.dev-acm.v3socp.boo
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
